[tool.poetry]
name = "csv-target-association"
version = "0.1.0"
description = ""
authors = ["Troy Havelock <troy.havelock@snyk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.8.1"
requests = "^2.32.3"
typer = "^0.12.5"

[tool.poetry.scripts]
csv-target-association = "csv_target_association.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
